made habit buttons look more clickable

--- a/public/global.css
+++ b/public/global.css
@@ -60,6 +60,7 @@ button {
   color: #333;
   background-color: #f4f4f4;
   outline: none;
+  cursor: pointer;
 }
 
 button:active {
@@ -68,6 +69,10 @@ button:active {
 
 button:focus {
   border-color: #666;
+}
+
+button:disabled {
+  cursor: default;
 }
 
 p {
